Boton buscar input backgroun color rosado

--- a/Koala/_bloques.scss
+++ b/Koala/_bloques.scss
@@ -149,6 +149,8 @@ body {
     .div-resultados-mis-guifos--crear-guifo--html {
         margin-top: 17px;
         width: 83.4%;
+        height: 800px;
+        align-content: flex-start;
     }
 
 /*-------------------------------------------------------------------------*/
