--- a/Koala/_elementos.scss
+++ b/Koala/_elementos.scss
@@ -495,7 +495,9 @@
     border-bottom: none;
     border-top: none;
 }
-
+.margin-rectangulo {
+    margin-left: 2px;
+}
 
 .activo {
     background: #F7C9F3;
