--- a/Koala/_modificadores.scss
+++ b/Koala/_modificadores.scss
@@ -119,6 +119,9 @@ a:visited{
     
     
 }
+.boton-texto--buscar:visited {
+    color: #B4B4B4;
+}
 
 .boton-texto--buscar:hover {
     color: $color-texto_botones-oscuro;
