--- a/Koala/_colores-day.scss
+++ b/Koala/_colores-day.scss
@@ -17,7 +17,7 @@ $color-background_cajas_clara: #E6E6E6;
 $color-background_cajas_blanca:#FFFFFF;
 $color-backgroud_boton-buscar-resultados:#F0F0F0; 
 
-$color-background_boton_ver-mas: #2E32FB;
+$color-background_boton_ver-mas: #4180F6;
 $color-caja-gifs-sugeridos: rgba(230, 230, 230, 0) ;
 $color-texto-day:#110038;
 $color-texto_botones-oscuro: #110038;
@@ -33,7 +33,7 @@ $box-shadow_claro_inset-1:  inset -1px -1px 0 0 #B4B4B4, inset 1px 1px 0 0 #FFFF
 $box-shadow_caja_titulo:inset -2px -2px 0 0 #E6DCE4, inset 2px 2px 0 0 #80687D;
 $box-shadow-caja-contenedor-busqueda-blanco:inset -2px -2px 0 0 #E6E6E6, inset 2px 2px 0 0 #000000;
 $box-shadow_boton-general:inset -1px -1px 0 0 #997D97, inset 1px 1px 0 0 #FFFFFF;
-$box-shadow_boton_ver-mas: inset -2px -2px 0 0 #2124B3, inset 2px 2px 0 0 #FFFFFF;
+$box-shadow_boton_ver-mas: inset -2px -2px 0 0 #284F99, inset 2px 2px 0 0 #FFFFFF;
 $box-shadow-boton-buscar: inset -1px -1px 0 0 #B4B4B4, inset 1px 1px 0 0 #FFFFFF;
 $box-shadow-grabacion: inset -2px -2px 0 0 #E6E6E6, inset 2px 2px 0 0 #000000;
 $box-shadow-boton-tema-claro:  inset -1px -1px 0 0 #E6DCE4, inset 1px 1px 0 0 #FFFFFF;
