Revision variables day y organizacin archivos @imp

--- a/Koala/estilo.scss
+++ b/Koala/estilo.scss
@@ -1,6 +1,6 @@
-//@import 'variables-night';
-@import 'colores-day';
-@import 'variables-day';
+@import '_variables';
+// @import 'colores-day';
+@import 'colores-night';
 @import 'elementos';
 @import 'bloques';
 @import 'modificadores';
