--- a/estilos/1sailor-day.css
+++ b/estilos/1sailor-day.css
@@ -15,17 +15,12 @@
   display: inline-flex;
   background: #F7C9F3;
   height: 36px;
-  border: 1px solid #110038;
-  box-shadow: inset -1px -1px 0 0 #997D97, inset 1px 1px 0 0 #FFFFFF;
-  border: 1px solid #110038;
-  cursor: pointer; }
+  box-shadow: inset -1px -1px 0 0 #997D97, inset 1px 1px 0 0 #FFFFFF; }
 
 .boton-general {
   display: inline-flex;
   box-shadow: inset -1px -1px 0 0 #997D97, inset 1px 1px 0 0 #FFFFFF;
-  height: 36px;
-  border: 1px solid #110038;
-  cursor: pointer; }
+  height: 36px; }
 
 .boton--extra-large {
   width: 256px; }
@@ -52,7 +47,6 @@
   background: #F0E5EE; }
 
 .boton-tema-claro {
-  background: #FFF4FD;
   box-shadow: inset -1px -1px 0 0 #E6DCE4, inset 1px 1px 0 0 #FFFFFF;
   border: 1px solid #CCA6C9;
   width: 150px; }
@@ -72,9 +66,6 @@
 .boton-general__margin-top {
   margin-top: 10px; }
 
-.boton-subir-guifo__marginleft {
-  margin-left: 3%; }
-
 .boton-tema-texto__margin {
   margin-left: 16px; }
 
@@ -88,58 +79,23 @@
 .imagen-boton {
   vertical-align: middle; }
 
-.a-imagen-boton {
+.flecha-abajo {
   width: 30px;
   height: 30px; }
-
-.a-imagen-listo {
-  width: 30px;
-  height: 30px; }
-
-.flecha {
-  width: 30px;
-  height: 30px; }
-
-.flecha-foward {
-  width: 24px;
-  height: 24px;
-  border: 1px solid #110038; }
-
-.flecha-foward__margin-right {
-  margin-right: 5px; }
 
 .boton--ver-mas {
   width: 81px;
   height: 34px;
-  background: #4180F6;
+  background: #2E32FB;
   border: 1px solid #4C2F99;
-  box-shadow: inset -2px -2px 0 0 #284F99, inset 2px 2px 0 0 #FFFFFF;
-  cursor: pointer; }
+  box-shadow: inset -2px -2px 0 0 #2124B3, inset 2px 2px 0 0 #FFFFFF; }
 
 .boton--buscar {
   width: 8.5%;
   height: 36px;
   background: #E6E6E6;
   border: 1px solid #808080;
-  box-shadow: inset -1px -1px 0 0 #B4B4B4, inset 1px 1px 0 0 #FFFFFF;
-  background-image: url(../assets/CombinedShape.svg);
-  background-repeat: no-repeat;
-  background-position: left 5px top 10px;
-  background-origin: content-box; }
-
-.boton-historial {
-  background: #4180F6;
-  border: 1px solid #4C2F99;
-  box-shadow: inset -2px -2px 0 0 #284F99, inset 2px 2px 0 0 #FFFFFF;
-  color: #FFFFFF;
-  padding: 0px 5px 0px 5px;
-  line-height: 34px;
-  list-style: none;
-  cursor: pointer;
-  height: 34px;
-  margin-right: 10px;
-  font-family: "Chakra Petch", sans-serif;
-  font-size: 14px; }
+  box-shadow: inset -1px -1px 0 0 #B4B4B4, inset 1px 1px 0 0 #FFFFFF; }
 
 /*------------------------Texto botones---------------------*/
 .boton-texto {
@@ -156,7 +112,7 @@
 
 .boton-texto--buscar {
   color: #B4B4B4;
-  width: 60%; }
+  width: 102px; }
 
 .boton-texto--grande {
   font-size: 16px;
@@ -196,24 +152,20 @@
   padding-left: 34px; }
 
 .boton-chequeo-capturar {
-  width: 101px;
+  width: 93px;
   padding-left: 34px; }
 
 .boton-chequeo-listo {
-  width: 94px;
-  padding-left: 42px; }
+  width: 86px;
+  padding-left: 41px; }
 
 .boton-chequeo-repetirCaptura {
-  width: 126px;
-  padding-left: 10px; }
+  width: 121px;
+  padding-left: 5px; }
 
 .boton-chequeo-subir-guifo {
-  width: 110px;
-  padding-left: 27px; }
-
-.boton-chequeo-cancelar {
-  width: 101px;
-  padding-left: 34px; }
+  width: 105px;
+  padding-left: 23px; }
 
 .boton-exito-copiar-guifo {
   width: 195px;
@@ -261,7 +213,7 @@
   text-decoration: underline; }
 
 .texto-bold {
-  font-weight: bold; }
+  font-weight: 600; }
 
 .texto--caja-titulo {
   font-size: 14px;
@@ -291,18 +243,6 @@
 .texto--parrafo-crear-guifo-p {
   font-size: 14px;
   margin: 0px 0px 0px 0px; }
-
-.texto-p-tiempo-restante {
-  font-family: "Chakra Petch", sans-serif;
-  font-size: 12px;
-  color: #11003869; }
-
-.texto-p-saylor {
-  margin: 0px;
-  width: 100%; }
-
-.span-años {
-  text-decoration: line-through; }
 
 .pestaña {
   background: linear-gradient(270deg, #F7C9F3 0%, #4180F6 100%);
@@ -378,52 +318,21 @@
 .cajas-gifs-sugeridos__margin {
   margin-left: 0.8%; }
 
-.imagen-sugeridos {
-  width: 100%;
-  height: 279.5px; }
-
 .caja-gifs-resultados {
-  width: 24.33%;
-  height: 304px; }
-
-.caja-gifs-resultados:hover {
+  width: 24.4%;
+  height: 304px;
   background: rgba(230, 230, 230, 0);
   box-shadow: inset -2px -2px 0 0 #B4B4B4, inset 2px 2px 0 0 #FFFFFF; }
 
 .cajas-gifs-resultados__margin {
   margin: 1% 0px 0px 0.6%; }
 
-.imagen-resutados {
-  width: 97.7%;
-  height: 298px;
-  margin: 2px; }
-
-.marco-imagen {
-  width: 97%;
-  height: 296px;
-  margin: 2px; }
-
-.marco-imagen:hover {
-  border: 1px dotted #110038; }
-
-#etiqueta {
-  display: none;
-  width: 97%;
-  height: 24px;
-  background: linear-gradient(270deg, #F7C9F3 0%, #4180F6 100%);
-  opacity: 84%;
-  margin: 2px 2px 2px 2.5px;
-  top: 273px; }
-
-.caja-gifs-resultados:hover #etiqueta {
-  display: block; }
-
 .cajas-gif-interior {
-  width: 97%;
-  height: 280px; }
+  width: 96.5%;
+  height: 279px; }
 
 .cajas-gif-interior__margin {
-  margin: 2px 0px 0px 4px; }
+  margin: 2px 0px 0px 6px; }
 
 .caja-crear-guifos-inicio {
   width: 47.5%;
@@ -446,60 +355,42 @@
   box-shadow: inset -2px -2px 0 0 #B4B4B4, inset 2px 2px 0 0 #FFFFFF; }
 
 .caja-crear-guifos-chequeo___margin {
-  margin: 0px 0px 0px 0px; }
+  margin: 5% 0px 0px 0px; }
 
 .caja-contenedor-grabacion {
-  width: 97%;
+  width: 97.4%;
   height: 440px;
-  border: 1.5px solid #979797;
+  border: 1px solid #979797;
   box-shadow: inset -2px -2px 0 0 #E6E6E6, inset 2px 2px 0 0 #000000;
   background: #FFFFFF; }
 
 .caja-contenedor-grabacion__margin {
   margin: 1% 0px 0px 0px; }
 
-.video {
-  width: 99.4%;
-  height: 435px;
-  margin: 2.5px 0px 0px 1px;
-  object-fit: fill; }
-
-.imagen-video {
-  width: 99.4%;
-  height: 435px;
-  margin: 2.5px 0px 0px 0.8px; }
-
 .caja-contador {
   width: 124px;
   height: 36px;
   background: #FFFFFF;
   box-shadow: inset -2px -2px 0 0 #E6E6E6, inset 2px 2px 0 0 #000000;
-  border: 1.5px solid #979797;
-  margin-right: 6%; }
+  border: 1px solid #979797; }
 
 .caja-contenedora-cargando {
-  width: 228px;
+  width: 328px;
   height: 27px;
   background: #B4B4B4;
   box-shadow: inset -2px -2px 0 0 #E6E6E6, inset 2px 2px 0 0 #000000; }
 
-.caja-contenedora-cargando-cancelar {
-  width: 324px;
-  height: 27px; }
-
-.rectangulo {
+.rectangulo-inactivo {
   width: 12px;
   height: 20px;
   background: #999999;
-  border: 1px solid #cecccc;
-  border-bottom: none;
-  border-top: none; }
+  border: 1px solid #cecccc; }
 
-.margin-rectangulo {
-  margin-left: 2px; }
-
-.activo {
-  background: #F7C9F3; }
+.rectangulo-activo {
+  width: 12px;
+  height: 20px;
+  background: #F7C9F3;
+  border: 1px solid #cecccc; }
 
 .caja-exito {
   width: 721px;
@@ -520,17 +411,12 @@
   height: 196px;
   background: #FFFFFF;
   border: 1px solid #979797;
-  box-shadow: inset -2px -2px 0 0 #E6E6E6, inset 2px 2px 0 0 #000000;
+  box-20pxshadow: inset -2px -2px 0 0 #E6E6E6, inset 2px 2px 0 0 #000000;
   margin: 7% 0px 0px 5%; }
 
 .caja-botones-exito {
   width: 50%;
   height: 367px; }
-
-.gif-exito {
-  width: 99%;
-  height: 192px;
-  margin: 2px 0px 0px 2px; }
 
 .caja-contenedor-cambio-tema {
   width: 167px;
@@ -564,11 +450,8 @@
   -webkit-box-shadow: none; }
 
 /*Comportamiento*/
-html {
-  scroll-behavior: smooth; }
-
 body {
-  background-color: #fff4fd;
+  background-color: #fef4fd;
   margin: 0px;
   padding: 0px;
   box-sizing: border-box;
@@ -594,24 +477,21 @@ body {
     justify-content: center; }
   body .justify-start {
     justify-content: flex-start; }
-  body .justify-end {
-    justify-content: flex-end; }
   body .justify-evenly {
     justify-content: space-evenly; }
   body .div-barra-navegacion--crear-guifo--html {
     position: relative;
-    height: 118px;
+    height: 193.6px;
     width: 82.9%;
     justify-content: start; }
   body .flecha-atras {
     position: absolute;
-    top: 47px;
-    left: -35px;
+    top: 51px;
+    left: -40px;
     height: 24px;
     width: 24px; }
   body .div-pestaña-crear-guifos-1 {
-    width: 99.1%;
-    margin-top: 2px; }
+    width: 98.8%; }
   body .caja-crear-guifos-inicio-texto {
     justify-content: space-between; }
   body .div-contenedor-texto-crear {
@@ -638,14 +518,8 @@ body {
     position: relative;
     height: 440px; }
   body .controles-grabacion {
-    width: 97.45%;
+    width: 100%;
     justify-content: flex-end;
-    height: 67px; }
-  body .div-izquierdo-controles {
-    width: 50%;
-    height: 67px; }
-  body .div-derecho-controles {
-    width: 50%;
     height: 67px; }
   body .div-titulo-exito {
     width: 88%;
@@ -661,9 +535,7 @@ body {
     width: 100%; }
   body .div-resultados-mis-guifos--crear-guifo--html {
     margin-top: 17px;
-    width: 83.4%;
-    height: 800px;
-    align-content: flex-start; }
+    width: 83.4%; }
   body .boton_buscar {
     position: relative;
     justify-content: space-around; }
@@ -689,8 +561,7 @@ body {
     height: 14px;
     z-index: 10000;
     margin-top: 7px;
-    right: 8px;
-    cursor: pointer; }
+    right: 8px; }
   body .dropdown {
     position: relative;
     display: inline-block;
@@ -725,22 +596,24 @@ body {
   width: 100%; }
 
 .div-barra-navegacion {
-  height: 118px;
+  height: 193.6px;
   width: 82.9%; }
 
 .logo {
-  display: flex;
-  flex-direction: row;
   width: 102.6px;
-  height: 114px;
-  align-items: center; }
+  height: 114px; }
+
+.srclogo-dia  {
+  background: url(./assets/gifOF_logo.png)}
 
 .div-botones--barra-navegacion {
   width: 92.9%;
   height: 114px;
-  justify-content: flex-end;
-  align-items: center; }
+  justify-content: flex-end; }
 
+/* .boton-saylor-day {
+     margin-top: 8px;
+ }*/
 .texto-mis-gifos__margin-top {
   margin-top: 8px; }
 
@@ -750,38 +623,21 @@ body {
   justify-content: space-evenly; }
 
 .div-contenedor-boton-buscar {
-  position: relative;
-  width: 95%;
+  width: 70px;
   height: 30px;
-  margin-left: 1.2px;
-  /*   padding-left: 41px; */
+  margin-right: 2px;
+  padding-left: 41px;
   line-height: 30px; }
 
-.lupa {
-  width: 20%;
-  height: 30px;
-  margin-left: 8px; }
-
 .imagen-lupa {
+  position: absolute;
+  top: 10px;
+  left: 22px;
   width: 14px;
   height: 14px; }
 
-.article {
-  width: 100%; }
-
-.ul-lista {
-  width: 82.9%;
-  height: 40px;
-  padding: 0px;
-  margin: 1% 0px 0px 0px; }
-
 .section-sugerimos {
-  margin-top: 47px;
-  display: flex;
-  flex-direction: column; }
-
-.ocultar-section-sugerimos {
-  display: none; }
+  margin-top: 64px; }
 
 .div-resultado-sugerimos {
   margin-top: 15px;
@@ -798,33 +654,9 @@ body {
   margin-top: 17px;
   width: 83.4%; }
 
-.divtendencias {
-  position: relative;
-  z-index: 1; }
-
-.imagen-resutados {
-  position: absolute;
-  z-index: 2; }
-
-.marco-imagen {
-  position: absolute;
-  z-index: 3; }
-
-.etiqueta-imagen {
-  position: absolute;
-  z-index: 5; }
-
+/*Estados boton rosado*/
 a:active {
   color: #110038; }
-
-a:visited {
-  color: #110038; }
-
-.boton-chequeo-listo:visited {
-  color: #FFFFFF; }
-
-.marco-boton-dotted:hover {
-  border: 1px dotted #110038; }
 
 .marco-boton-dotted:active {
   border: 1px dotted #110038; }
@@ -835,30 +667,6 @@ a:visited {
 .boton:active {
   border: 1px solid #110038; }
 
-.div-botones-tema:hover #flecha-tema {
-  border: 1px dotted #110038;
-  background: #E6BBE2; }
-
-.div-botones-tema:hover #texto-tema {
-  border: 1px dotted #110038;
-  background: #E6BBE2; }
-
-.controles-grabacion:hover #boton-camara {
-  border: 1px dotted #110038;
-  background: #E6BBE2; }
-
-.controles-grabacion:hover #boton-capturar {
-  border: 1px dotted #110038;
-  background: #E6BBE2; }
-
-.div-derecho-controles:hover #a-imagen-listo {
-  border: 1px dotted #FFFFFF;
-  background: rgba(255, 97, 97, 0.561); }
-
-.div-derecho-controles:hover #a-boton-listo {
-  border: 1px dotted #FFFFFF;
-  background: rgba(255, 97, 97, 0.561); }
-
 .boton-rosado:hover {
   background: #E6BBE2; }
 
@@ -868,12 +676,6 @@ a:visited {
 .boton-blanco:hover {
   background: #F0E5EE; }
 
-.texto-p-saylor:hover::first-letter {
-  border-bottom-style: solid;
-  border-bottom-width: 1px;
-  border-bottom-color: #110038;
-  line-height: 10pt; }
-
 .boton-blanco:active {
   border: 1px solid #110038; }
 
@@ -882,31 +684,18 @@ a:visited {
   border: 1px solid #808080; }
 
 .boton--buscar:hover {
-  background: #F7C9F3;
-  background-image: url(../assets/lupa.svg);
-  background-repeat: no-repeat;
-  background-position: left 5px top 10px;
-  background-origin: content-box; }
+  background: #F7C9F3; }
 
 .boton--buscar:active {
   background: #E6BBE2;
   border: 1px solid #110038;
-  background-image: url(../assets/lupa.svg);
-  background-repeat: no-repeat;
-  background-position: left 5px top 10px;
   box-shadow: inset -1px -1px 0 0 #997D97, inset 1px 1px 0 0 #FFFFFF; }
-
-.boton-texto--buscar:visited {
-  color: #B4B4B4; }
 
 .boton-texto--buscar:hover {
   color: #110038; }
 
 .boton-texto--buscar:active {
   color: #110038; }
-
-.boton-buscar-largo-buscar-resultados:hover {
-  background: #dbdbdb; }
 
 .boton--ver-mas:hover {
   background: #3A72DB; }
@@ -917,9 +706,6 @@ a:visited {
 .boton-texto--grande:active {
   border: 1px dotted #110038; }
 
-.boton-texto--grande:hover {
-  border: 1px dotted #110038; }
-
 .boton-texto--mediano:active {
   border: 1px dotted #110038; }
 
@@ -928,11 +714,7 @@ a:visited {
   line-height: 33px; }
 
 .texto-mis-guifos:active {
-  color: #dbccdf;
-  border: none; }
-
-.boton-historial:hover {
-  background: #4476d3; }
+  color: #dbccdf; }
 
 /*Cajas*/
 .cajas-gif-interior:hover {
