--- a/Koala/_modificadores.scss
+++ b/Koala/_modificadores.scss
@@ -4,11 +4,22 @@
 
 //El color de los textos de los botones, cuando se ponen en active
 a:active{
-    color: $color-texto_botones-oscuro; 
+    color: $color-texto_botones-claro; 
 }
 a:visited{
-   color: $color-texto_botones-oscuro; 
+   color: $color-texto_botones-claro; 
 }
+//para conservar el color del texto de botons navbar
+
+.boton-texto-blanco:active {
+    color:$color-boton_blanco;
+}
+
+.boton-texto-blanco:visited {
+    color:$color-boton_blanco;
+}
+
+
 // color texto de boton ver mas ancla
 .boton-chequeo-listo:visited {
     color: #FFFFFF;
@@ -26,7 +37,7 @@ a:visited{
 
 //Botones de navbar
 .boton:hover {
-    background: #E6BBE2;
+    background: #CE36DB;
   
 }
 
@@ -37,23 +48,23 @@ a:visited{
 //Se activa el hover de los dos botones
 .div-botones-tema:hover #flecha-tema {
     border: 1px dotted #110038;
-    background: #E6BBE2 ;  
+    background: #CE36DB ;  
 }
 
 .div-botones-tema:hover #texto-tema {
     border: 1px dotted #110038;
-    background: #E6BBE2 ;  
+    background: #CE36DB ;  
 }
 
 //Se activa el hover de los dos botones camara y capturar en crear guifos
 .controles-grabacion:hover #boton-camara {
     border: 1px dotted #110038;
-    background: #E6BBE2 ;  
+    background: #CE36DB ;  
 }
 
 .controles-grabacion:hover #boton-capturar {
     border: 1px dotted #110038;
-    background: #E6BBE2 ;  
+    background: #CE36DB ;  
 }
 
 //Se activa el hover de los dos botones listo en crear guifos
@@ -69,7 +80,7 @@ a:visited{
 
 
 .boton-rosado:hover {
-    background: #E6BBE2 ; 
+    background: #CE36DB ; 
 }
 
 .boton-rosado:active{
@@ -81,23 +92,39 @@ a:visited{
 }
 
 
+.texto-p-saylor:hover {
+    color: #FFFFFF;
+}
+
+
 //Añade underline a el texto del dropdown tema
 .texto-p-saylor:hover::first-letter {
     
     border-bottom-style: solid;
     border-bottom-width: 1px;
-    border-bottom-color: #110038;
+    border-bottom-color: #FFFFFF;
     line-height: 10pt;
+   
 }
 
 .boton-blanco:active {
     border: 1px solid #110038;
 } 
 
+
+.boton-secundario:hover {
+    background: #110038;
+   
+}
 .boton-tema-claro:hover {
     box-shadow: $box-shadow-boton-tema-gris;
     border: $border-boton-tema-gris;
+    background: #2E32FB;
     
+}
+
+.boton-texto--saylor {
+    border: none;
 }
 
 
@@ -120,7 +147,7 @@ a:visited{
     
 }
 .boton-texto--buscar:visited {
-    color: #B4B4B4;
+    color: #8F8F8F ;
 }
 
 .boton-texto--buscar:hover {
@@ -131,14 +158,20 @@ a:visited{
     color: $color-texto_botones-oscuro;
    
 }
+.boton-chequeo-cancelar:visited {
+    color: #110038;
+}
 
 
+.boton-chequeo-repetirCaptura:hover {
+    border: 1px dotted #FFFFFF;
+}
 .boton-buscar-largo-buscar-resultados:hover {
-    background: #dbdbdb;
+    background: #CCCCCC;
 }
 
 .boton--ver-mas:hover  {
-    background: #3A72DB ;
+    background: #2629CC ;
 }
 
 .boton-texto--ver-mas:active {
@@ -158,7 +191,7 @@ a:visited{
 }
 
 .texto-mis-guifos:hover {
-    border: 1px dotted #110038; 
+    border: 1px dotted #FFFFFF; 
     line-height: 33px;
 }
 
@@ -171,7 +204,9 @@ a:visited{
     background: rgb(68, 118, 211);
 }
 
-
+.boton-crear-guifos-cancelar:visited {
+    color: #110038;
+} 
 
 
 
